Mobile scroll issue fix and css overlap issues fix

--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -33,6 +33,9 @@
     height: auto;
     box-sizing: border-box;
     justify-content: space-between;
+    @media (max-width: 820px) {
+        flex-flow: row wrap;  
+    }
 }
 
 .answerDisclaimerContainer {
