--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -12,15 +12,6 @@
         rgba(0, 0, 0, 0.12) 0px 4px 6px,
         rgba(0, 0, 0, 0.17) 0px 12px 13px,
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
-       
-    @media (max-width: 820px) {
-        position: relative;
-        width: 100%;
-        height: 100vh;
-        flex-direction: column-reverse;
-        font-size: 0.85rem;
-        gap: 0;
-    }
 }
 
 .chatRoot {
@@ -29,6 +20,7 @@
     background: rgb(229,231,232);
     gap: 2vw;
     padding-right: 2vw;
+    overflow: auto 
 }
 
 .chatContainer {
@@ -40,7 +32,7 @@
     height: 90%;
     margin: auto 0;
     padding: var(--vertical-padding) var(--vertical-padding) 1.5vh var(--vertical-padding);;
-    
+    overflow: auto;
     background: rgb(255, 255, 255);
     border-radius: 30px;
     @media (max-width: 820px) {
@@ -236,9 +228,15 @@
     width: 161px;
     height: 32px;
     left: calc(50% - 161px / 2 + 25.8px);
-    /* bottom: 116px; */
     border: 1px solid #d1d1d1;
     border-radius: 16px;
+    @media (max-width: 820px) {
+        left: 25% !important;
+        padding: 5px 12px; 
+        width: auto; 
+        bottom: 16px; 
+        top: 0px;
+    }
 }
 
 .stopGeneratingIcon {
@@ -248,18 +246,7 @@
 }
 
 .stopGeneratingText {
-    /* width: 103px;
-    height: 20px;
-    font-style: normal;
-    font-weight: 600; */
     font-size: 14px;
-    /* line-height: 20px;
-    display: flex;
-    align-items: center;
-    color: #242424;
-    flex: none;
-    order: 0;
-    flex-grow: 0; */
 }
 
 .citationPanel {
@@ -341,19 +328,28 @@ a {
 }
 
 
+.container {
+    @media (max-width: 820px) {
+        flex-direction: column-reverse;
+        font-size: 0.85rem;
+        gap: 0;
+        padding: 0px !important;
+    }
+}
 
 .chatRoot {
-
     @media (max-width: 820px) {
-        padding: 0px;
+        padding: 0px !important;
         background: #ffffff; 
+        overflow: auto !important;
     }
 }
 
 .chatContainer {
     flex-direction: column;
     @media (max-width: 820px) {
-        height: auto; 
+        height: auto;         
+        overflow: auto;
     }
 }
 
@@ -366,14 +362,12 @@ a {
 }
 
 .chatMessageStream {
-    
     @media (max-width: 820px) {
         margin-top: 0; 
     }
 }
 
 .chatInput {
-    
     @media (max-width: 820px) {        
             position: static;
             flex: 0 0 auto;
@@ -385,12 +379,7 @@ a {
     }
 }
 
-@media (max-width: 480px) {
-   
-}
-
-.clearChatBroom, .clearChatBroomNoCosmos, .newChatIcon, .stopGeneratingContainer {
-   
+.clearChatBroom, .clearChatBroomNoCosmos, .newChatIcon {
     @media (max-width: 820px) {
        
         width: 32px; 
@@ -400,20 +389,8 @@ a {
     }
 }
 
-.stopGeneratingContainer {
-    
-    @media (max-width: 820px) {
-        
-        padding: 5px 12px; 
-        width: auto; 
-        left: 8px; 
-        bottom: 16px; 
-    }
-}
-
 .stopGeneratingIcon, .stopGeneratingText {
       @media (max-width: 820px) {
-       
         font-size: 12px; 
     }
 }
